Small change: Add box shadow, some comments

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -51,6 +51,7 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
     
     .card:hover {
         outline: rgba(255,255,255,0.9) solid 2px;
+        box-shadow: 0 0 10px 10px rgb(255, 255, 255, 0.15);
     }
     
     .projectCard {
