--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -76,12 +76,13 @@ const isStatusTag = tag > Tags.Status;
 </li>
 
 <style>
-    .tag a {
+    .tag a, .tag > span {
         color: inherit;
         text-decoration: none;
-        display: block;
+        /* display: block;
         width: 100%;
-        height: 100%;
+        height: 100%; */
+        user-select: none;
     }
     
     .circle {
