Minor Changes to home page
Remove <li> parent for each <ul>. Was adding an additional bullet point at the previous indent level previously. Removed that bullet point.

--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -63,7 +63,7 @@ const isStatusTag = tag > Tags.Status;
 ---
 <li class={tagClass + " tag " + additionalClasses} id={tag + "-" + project}>
         {ifAddLink ? 
-            <a href={"/search?" + urlSearchParams.toString()}>
+            <a href={"/projects?" + urlSearchParams.toString()}>
                 {isStatusTag && <span class={`circle status-${tagName.toLowerCase()}`}></span>}
                 {tagResult} 
             </a> 
