--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,6 +64,27 @@ div p:last-child {
     margin-bottom: 0px;
 }
 
+button {
+    background-color: var(--color-accent);
+    border-radius: 0.7rem;
+    border-color: var(--color-accent);
+    border-style: solid;
+    color: var(--color-text);
+    padding: 0.5rem;
+    white-space: nowrap;
+    transition: all 0.2s;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #111;
+}
+
+button:active {
+    box-shadow: 0 0 5px 5px var(--color-accent);
+    transform: scale(1.075);
+}
+
 /* Scrollbar */
 
 ::-webkit-scrollbar {
