Add an image carousel component

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -31,6 +31,7 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
                 <a href={`/${slug}`}>{title}</a>
             </h2>
             <TagDisplay tags={tags} project={title} isSmall={true}/>
+            <!-- TODO: Add date -->
             <p>{description}</p>
         </div>
     </div>
