Minor changes to tags

--- a/src/components/Tooltip.astro
+++ b/src/components/Tooltip.astro
@@ -7,6 +7,8 @@ const {text} = Astro.props as Props;
 
 ---
 
+<!-- TODO: Improve styling for Tooltip -->
+
 <div class="tooltip">
     <p>{text}</p>
     <div class="tooltip-content">
