--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -203,7 +203,7 @@ div p:last-child {
 }
 
 /* Tags Colors */
-.tool-tag {
+.software-tag {
     background-color: #008080;
     border-color: #008080;
 }
