--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -80,19 +80,14 @@ function dateDiff(startDate: Date, endDate: Date) : string {
         <div class="container">
             <div class="card">
                 <h1>{data.title}</h1>
-                <!-- TODO: Change to use Astro's <Image /> Not
-                     Not sure why last time Astro v3.0.3, any content after <Image /> was gone. Might be a bug -->
                 <Image src={data.thumbnailPath} alt={data.title + " thumbnail"} transition:name=`project-img-${data.title}`/>
+                <!-- TODO: display Tags and any other metadata beside the Image. Currently the thumbnail image has a lot of empty space on the sides. -->
                 <div style="height: 25px;"></div> <!-- Small block to separate img and tags -->
                 <TagDisplay tags={data.tags} project={data.title}/>
-                { data.startDate &&
-                    <h4>Start Date: {new Date(data.startDate).toLocaleDateString(userLocale, dateOptions)}</h4>
-                }
-                { data.releaseDate &&
-                    <h4>{data.tags.includes(Tags.Dropped) ? "Dropped" : "Release"} Date: {new Date(data.releaseDate).toLocaleDateString(userLocale, dateOptions)}</h4>
-                }
-                { duration &&
-                    <h4>Duration: {duration}</h4>
+                { data.releaseDate ? 
+                    <h4>Date: <span class="date">{data.startDate.toLocaleDateString(userLocale, dateOptions)} - {data.releaseDate.toLocaleDateString(userLocale, dateOptions)} ({duration})</span></h4>
+                    :
+                    <h4>Date: <span class="date">{data.startDate.toLocaleDateString(userLocale, dateOptions)} - Ongoing</span></h4>
                 }
                 <ul class="list-of-links">
                     <li>{data.projectLink != null && <a href={data.projectLink} class="inlineBtn" target="_blank">Project Link</a>}</li>
