--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -140,6 +140,8 @@ SeparateTags();
                         card.data.ifShow &&
                         <ProjectCard 
                             title={card.data.title} 
+                            startDate={card.data.startDate!}
+                            releaseDate={card.data.releaseDate}
                             description={card.data.shortDescription} 
                             thumbnailPath={card.data.thumbnailPath}
                             slug={card.slug}
