--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -185,6 +185,10 @@ button:active {
     transform: translateY(-0.1rem);
 }
 
+.date {
+    font-style: italic;
+}
+
 /* Tags */
 
 .tag-container.card {
