--- a/src/components/TableOfContentElements.astro
+++ b/src/components/TableOfContentElements.astro
@@ -16,7 +16,7 @@ const { headings } = Astro.props as Props;
         return (
             <li>
                 <a href={`#${heading.text.toLowerCase().replaceAll(" ", "-")}`}>{heading.text}</a>
-                <Astro.self headings={heading.subheadings} />
+                {heading.subheadings.length > 0 && <Astro.self headings={heading.subheadings} />}
             </li>
         );
     })}
