--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -268,7 +268,7 @@ SeparateTags();
             height: 100vh;
             position: -webkit-sticky;
             position: sticky;
-            top: 0;
+            top: 30px;
             min-width: 22.5rem;
             overflow-y: auto;  /* Add vertical scroll when needed */
         }
