--- a/src/components/TableOfContent.astro
+++ b/src/components/TableOfContent.astro
@@ -100,6 +100,7 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
         /* position: relative; */
         min-width: 250px;
         max-width: 275px;
+        transition: all 0.7s ease-in-out;
     }
 
     .table-of-content-container {
@@ -107,7 +108,6 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
         height: 100vh;
         /* position: relative; */
         /* left: 0%; */
-        transition: all 0.5s;
     }
     
     .table-of-content {
@@ -142,17 +142,23 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
         }
 
         .table-of-content-container {
-            transform: translateX(calc(100% + 10px));
-        }
-        
-        .table-of-content-container:hover {
-            transform: translateX(35px);
+            transform: translateX(calc(100% - 100px));
         }
 
+        .table-of-content-container:hover {
+            transform: translateX(-180px);
+            min-width: 250px;
+            max-width: 275px;
+        }
+        
+        .table-of-content-container:hover .table-of-content {
+            border: 1px solid white;
+        }
+        
         .table-of-content {
             overflow: visible;
         }
-
+        
         .expand-toc-arrow {
             display: block;
             position: absolute;
@@ -161,6 +167,7 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
     }
 </style>
 
-<script>
+<!-- TODO: Highlight each heading as the user scrolls -->
+<!-- <script>
     
-</script>
+</script> -->
