--- a/src/components/TableOfContentElements.astro
+++ b/src/components/TableOfContentElements.astro
@@ -42,6 +42,7 @@ const { headings } = Astro.props as Props;
         text-decoration: none;
         display: inline-block;
         width: 100%;
+        /* color: grey; */
     }
 
     li span {
