Modify Table of Contents, mobile layout for [slug] pages and various changes to content in different pages.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,8 @@ const { title, description, darkMode = true} = Astro.props as Props;
 
     If you have any suggestions for improvements, I'd love your feedback.
 
+    I'm planning to redo this website for various reasons. Some of the reasons are stated here: https://gnoxnahte.com/new-portfolio-website/
+
     Also, if you're impressed by my work and are considering me for a project, feel free to reach out.  
     I'm always on the lookout for interesting and reasonably priced projects, especially if my schedule allows.
 
