--- a/src/components/TableOfContent.astro
+++ b/src/components/TableOfContent.astro
@@ -95,16 +95,20 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
     
 <style>
     .table-of-content-container {
-        /* position: relative; */
-        min-width: 250px;
+        width: max-content;
+        min-width: 205px;
         max-width: 275px;
-        transition: all 0.7s ease-in-out;
+        height: fit-content;
+        
         position: sticky;
         top: 25px;
-        background-color: var(--color-secondary);
-        height: fit-content;
-        border-radius: 10px;
+        
         padding: 15px 20px 10px;
+        margin-left: 25px;
+        
+        border-radius: 10px;
+        background-color: var(--color-secondary);
+        transition: all 0.7s ease-out;
     }
     
     .table-of-content {
@@ -118,23 +122,15 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
         border-bottom: none;
     }
     
-    /* .expand-toc-arrow {
-        display: none;
-    } */
-
     @media screen and (max-width: 1200px) {
         .table-of-content-container {
             min-width: 0;
             width: 0;
+            margin-left: 0;
             padding: 0;
             opacity: 0;
+            overflow: hidden;
         }
-        
-        /* .expand-toc-arrow {
-            display: block;
-            position: absolute;
-            transform: translate(-40px, 1.25rem);
-        } */
     }
 </style>
 
