--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -193,10 +193,10 @@ button:active {
     text-align: center;
     text-decoration: none;
     transform: translateY(-0.1rem);
+    min-width: max-content;
 }
 
-a[target="_blank"].inlineBtn:after
- {
+a[target="_blank"].inlineBtn:after {
     margin-left: .3rem;
     transform: translateY(-1.5px);
     filter: brightness(1000%);
