--- a/src/components/TableOfContent.astro
+++ b/src/components/TableOfContent.astro
@@ -108,14 +108,14 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
         
         border-radius: 10px;
         background-color: var(--color-secondary);
-        transition: all 0.7s ease-out;
+        transition: all 0.7s ease-out, max-width 1.2s;
     }
     
     .table-of-content {
         height: fit-content;
         background-color: var(--color-secondary);
     }
-
+    
     .table-of-content h2 {
         margin: 0;
         padding: 0;
@@ -125,11 +125,13 @@ function generateTableOfContent(headings: MarkdownHeading[]) {
     @media screen and (max-width: 1200px) {
         .table-of-content-container {
             min-width: 0;
+            max-width: 0;
             width: 0;
             margin-left: 0;
             padding: 0;
             opacity: 0;
             overflow: hidden;
+            transition: all 0.7s ease-out, opacity 0.4s;
         }
     }
 </style>
