--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -124,12 +124,15 @@ function dateDiff(startDate: Date, endDate: Date) : string {
         max-width: 1500px;
         
         flex-direction: row;
+        transition: all 0.5s;
     }
 
     .list-of-links {
         list-style: none;
         padding: 0;
         display: flex;
+        flex-wrap: wrap;
+        row-gap: .75rem;
     }
 
     .list-of-links li {
@@ -142,6 +145,13 @@ function dateDiff(startDate: Date, endDate: Date) : string {
         margin: 0 auto;
         object-fit: contain;
         height: unset;
+    }
+
+    @media screen and (max-width: 850px) {
+        .layout-container {
+            padding: 0;
+            margin: 0;
+        }
     }
 </style>
 
