--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -176,6 +176,14 @@ function dateDiff(startDate: Date, endDate: Date) : string {
         /* font-size: 1.75em; */
     }
 
+    iframe[src*="itch.io/embed-upload"] {
+        width: 100%;
+        aspect-ratio: 16/9;
+        margin: 0;
+        margin-bottom: 1rem;
+        height: 100%;
+    }
+
 </style>
 
 <script>
