Modify The Great Tuna Escape project

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Layout from "../layouts/Layout.astro";
 			</ul>
 		</div>
 		<h1>Featured Projects</h1>
-		<ProjectCardFromCollection title="spellbound-rollers"/>
+		<ProjectCardFromCollection title="the-great-tuna-escape"/>
 		<ProjectCardFromCollection title="portfolio-website"/>
 	</div>
 </Layout>
