--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,23 +11,27 @@ import Layout from "../layouts/Layout.astro";
 			<p>I'm passionate both game and web development and I'm looking for new projects that interest me and can contribute to!</p>
 			
 			<h2>Education</h2>
+			<h3>Game Developer. <a href="/projects?includeTags=%5B%22201%22%5D">Game Projects</a></h3>
+
 			<ul>
-				<li>Game Developer. <a href="/projects?includeTags=%5B%22201%22%5D">Game Projects</a>
+				<li>Graduated from Game Development and Technology from NYP (Nanyang Polytechnic)</li>
+				<li>Certificates from the Diploma:
 					<ul>
-						<li>Graduated from Game Development and Technology from NYP (Nanyang Polytechnic)</li>
+						<li>Director's List - Academic Year 2019/20 Semester 1</li>
+						<li>Director's List - Academic Year 2021/22 Semester 2</li>
 					</ul>
 				</li>
-				<!-- TODO (HIGH): Add correct link -->
-				<li>Web Developer. <a href="/projects?includeTags=%5B%22203%22%5D">Web Projects</a>
-					<ul>
-						<li>Self taught during my free time</li>
-						<li>Mainly used to build this website. <a href="/portfolio-website">Blog on building process</a></li>
-					</ul>
-				</li>
+			</ul>
+			<!-- TODO (HIGH): Add correct link -->
+			<h3>Web Developer. <a href="/projects?includeTags=%5B%22203%22%5D">Web Projects</a></h3>
+			<ul>
+				<li>Self taught during my free time</li>
+				<li>Mainly used to build this website. <a href="/portfolio-website">Blog on building process</a></li>
 			</ul>
 		</div>
 		<h1>Featured Projects</h1>
 		<ProjectCardFromCollection title="the-great-tuna-escape"/>
 		<ProjectCardFromCollection title="portfolio-website"/>
+		<ProjectCardFromCollection title="obsidian-auto-embed"/>
 	</div>
 </Layout>
